# BirdsBoard

./: .gitignore  CLAUDE.md  LICENSE  README.md
.github/: FUNDING.yml
ADC_Test/: ADC_Test.ino
BirdsBoard_Test/: BirdsBoard_Test.ino
Firmware/: LICENSE
Firmware/ADC_Test/: ADC_Test.ino
Firmware/Tern/: Tern.ino
Firmware/Tockus/: README.md  Tockus.ino
Firmware/Tockus/simulator/: CMakeLists.txt  README.md
Firmware/Tockus/simulator/src/: audio_engine.cpp  audio_engine_v2.cpp  audio_test.h  coreaudio_engine.h  mainwindow.cpp  simple_audio.cpp  tockus_dsp.cpp
Firmware/Wren/: README.md  Wren.ino  sin_table.h
Hardware/: BirdsBoard.kicad_pcb  BirdsBoard.kicad_prl  BirdsBoard.kicad_pro  BirdsBoard.kicad_sch  LICENSE  Library.kicad_sym  fp-info-cache
Hardware/Library.pretty/: ALPS_RK09K_Single_Vertical_20mm.kicad_mod  CP_Elec_6.3x5.4_Nichicon.kicad_mod  C_0402_1005Metric.kicad_mod  C_0603_1608Metric.kicad_mod  C_0603_1608Metric_Pad1.08x0.95mm_HandSolder.kicad_mod  C_0805_2012Metric_Pad1.18x1.45mm_HandSolder.kicad_mod  DFN-8-1EP_3x2mm_P0.5mm_EP1.75x1.45mm.kicad_mod  D_SOD-323.kicad_mod  IDC-Header_2x08_P2.54mm_Vertical.kicad_mod  LOGO.kicad_mod  PinHeader_1x05_P2.54mm_Vertical.kicad_mod  PinHeader_1x10_P1.27mm_Vertical.kicad_mod  RP2040-Zero-THT2.kicad_mod  R_0402_1005Metric.kicad_mod  R_0603_1608Metric_Pad0.98x0.95mm_HandSolder.kicad_mod  SOIC-8_3.9x4.9mm_P1.27mm.kicad_mod  SOP-8_3.76x4.96mm_P1.27mm.kicad_mod  SOT-223-3_TabPin2.kicad_mod  (+3 more)
Panel/: Wren_Panel.kicad_pcb  Wren_Panel.kicad_prl  Wren_Panel.kicad_pro
Tern/: Tern.ino
Tockus/: Tockus.ino
Wren/: PROTOCOL.md  Wren.ino  Wren.txt  plan.md  waveforms.h
(+14 files in other folders)
